--- a/index.css
+++ b/index.css
@@ -11,4 +11,12 @@ body {
   margin-top: 50px;
   padding: 5px;
   background-color: rgb(182, 155, 155);
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+#week {
+  background-color: rgb(182, 155, 155);
+  margin: 10px 50px;
+  display: flex;
 }
