--- a/index.css
+++ b/index.css
@@ -3,20 +3,19 @@
   padding: 0;
 }
 body {
-  background-color: rgb(226, 197, 197) !important;
-}
-.container {
-  text-align: center;
-  left: 50%;
-  margin-top: 50px;
-  padding: 5px;
-  background-color: rgb(182, 155, 155);
-  border: 1px solid black;
-  border-radius: 3px;
+  background-color: rgb(226, 197, 197);
+  overflow: hidden;
 }
 
-#week {
+.container {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
   background-color: rgb(182, 155, 155);
-  margin: 10px 50px;
+  border: 1px inset gray;
+  border-radius: 3px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 }
