--- a/index.css
+++ b/index.css
@@ -16,5 +16,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+}
+#result {
+  width: 250px;
+  height: 300px;
+  background-color: white;
+  border: 1px solid black;
+  margin-top: 10px;
 }
