--- a/index.css
+++ b/index.css
@@ -17,10 +17,14 @@ body {
   flex-direction: column;
   align-items: center;
 }
-#result {
+.result {
   width: 250px;
-  height: 300px;
+  height: 100px;
   background-color: white;
   border: 1px solid black;
   margin-top: 10px;
+  display: inline-block;
+}
+.list {
+  list-style: none;
 }
