--- a/index.css
+++ b/index.css
@@ -3,15 +3,17 @@
   padding: 0;
 }
 body {
-  background-color: rgb(226, 197, 197);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .container {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  background-color: rgb(182, 155, 155);
-  border: 1px inset gray;
+  /* background-color: rgb(182, 155, 155); */
+  /* border: 1px inset gray; */
   border-radius: 3px;
   display: flex;
   flex-direction: column;
@@ -19,11 +21,12 @@ body {
 }
 .result {
   width: 250px;
-  height: 100px;
-  background-color: white;
+  min-height: 100px;
+  background-color: rgb(88, 75, 75);
   border: 1px solid black;
   margin-top: 10px;
-  display: inline-block;
+  display: flex;
+  color: white;
 }
 .list {
   list-style: none;
