--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: rgba(88, 75, 75, 0.554);
+  background-color: rgba(88, 75, 75, 0.7);
   border: 1px solid black;
 }
 
@@ -33,7 +33,7 @@ body {
   border-radius: 15px;
   text-align: center;
   color: white;
-  background-color: rgba(88, 75, 75, 0.554);
+  background-color: rgba(88, 75, 75, 0.7);
 }
 ::placeholder {
   color: white;
@@ -58,7 +58,7 @@ body {
 .result {
   width: 250px;
   min-height: 100px;
-  background-color: rgba(88, 75, 75, 0.554);
+  background-color: rgba(88, 75, 75, 0.7);
   border: 1px solid black;
   margin: 10px;
   display: flex;
@@ -77,6 +77,6 @@ li {
   display: flex;
   justify-content: space-around;
 }
-.fa.fa-temperature-high {
-  padding-right: 5px;
+.fa.fa-wind {
+  padding-right: 22px;
 }
