--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ body {
   justify-content: center;
   background-color: rgba(88, 75, 75, 0.7);
   border: 1px solid black;
+  filter: opacity(0.8);
 }
 
 .header {
@@ -39,7 +40,7 @@ body {
   color: white;
 }
 
-#searchicon {
+#button {
   border-radius: 50%;
   width: 25px;
   height: 25px;
@@ -56,7 +57,7 @@ body {
   justify-content: center;
 }
 .result {
-  width: 250px;
+  width: 150px;
   min-height: 100px;
   background-color: rgba(88, 75, 75, 0.7);
   border: 1px solid black;
@@ -64,6 +65,10 @@ body {
   display: flex;
   color: white;
   float: left;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: opacity(0.9);
 }
 .list {
   list-style: none;
