--- a/index.css
+++ b/index.css
@@ -60,11 +60,12 @@ body {
 .result {
   width: 200px;
   min-height: 100px;
-  border: 1px solid black;
-  border-radius: 5px;
+  border: 1px solid gray;
+  /* border-radius: 5px; */
   margin: 10px;
   display: flex;
   color: black;
+  box-shadow: 2px 2px 4px 4px rgb(31, 28, 28);
   /* background: url("../Assets/Pics/04d.jpg"); */
   background-size: cover !important;
   background-position: left !important;
